Fix remove from cart overflow on small screens

--- a/src/less/_store.less
+++ b/src/less/_store.less
@@ -83,6 +83,19 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    @media (max-width:368px) {
+      button {
+        font-size: 1.5rem;
+      }
+    }
+
+    @media (max-width:350px) {
+      button {
+        font-size: 1.3rem;
+      }
+    }
+
 }
 
 .large_wrap {
